# ros2-articulated-arm-mobile-robot

./: .editorconfig  .gitattributes  .gitignore  INSTALL_WSL_UBUNTU.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
docs/: TP2_requirements_summary.md  kinematics_notes.md  runtime_validation_2026-03-22.md  troubleshooting.md  validation_checklist.md
ros2_ws/src/my_robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_description/launch/: display.launch.py  display_2r.launch.py  display_3r.launch.py  display_combined.launch.py  display_mobile.launch.py  display_mobile_sensors.launch.py
ros2_ws/src/my_robot_description/meshes/: README.md
ros2_ws/src/my_robot_description/rviz/: arm.rviz  combined.rviz  mobile.rviz
ros2_ws/src/my_robot_description/test/: test_expected_files.md  test_xacro_commands.sh
ros2_ws/src/my_robot_description/urdf/: combined_robot.urdf.xacro  mobile_robot.urdf.xacro  mobile_robot_with_sensors.urdf.xacro  robot.urdf  robot_2r.urdf  robot_2r.urdf.xacro  robot_3r.urdf.xacro
ros2_ws/src/my_robot_description/urdf/components/: arm_macros.xacro  mobile_base_macros.xacro  sensors_macros.xacro
tools/: build_workspace.sh  env_check.sh  generate_urdf_preview.sh  launch_2r.sh  launch_3r.sh  launch_combined.sh  launch_mobile.sh  launch_mobile_sensors.sh  setup_repo.sh  source_ros.sh  validate_workspace.sh
